# django-clean-architecture-exampl

./: .gitignore  db.sqlite3  flake.nix  manage.py  pyproject.toml  setup.cfg
django_clean_architecture/: asgi.py  settings.py  urls.py  wsgi.py
todo/: controllers.py  database_gateway.py  forms.py  models.py  presenter.py  tests.py  urls.py  use_cases.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: add-todo.html  todo-list.html
todo/tests/: dependency_injection.py  test_add_todo_controller.py  test_add_todo_presenter.py  test_add_todo_use_case.py  test_list_todos_use_case.py  test_todos_database_gateway_impl.py  test_todos_list_presenter.py
