[tool.poetry]
name = "django-clean-architecture-exampl"
version = "0.1.0"
description = "Draft on how to implement clean architecture (with django)"
authors = ["Sebastian Jordan <sebastian.jordan.mail@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
